[gd_scene load_steps=13 format=4 uid="uid://b42v8vnhencjj"]

[ext_resource type="Script" uid="uid://beeaenan04fyn" path="res://scenes/main/api_scenes/game_menu.gd" id="1_r32m2"]
[ext_resource type="FontFile" uid="uid://ci7pnw30vmq2s" path="res://fonts/Orbitron-Bold.ttf" id="2_lqqhp"]
[ext_resource type="Theme" uid="uid://dct7dwc7568bd" path="res://fonts/MinimalUI.tres" id="2_m5f7d"]
[ext_resource type="Texture2D" uid="uid://ce3588ef4gegg" path="res://sprites/bill_idle1.png" id="3_0dags"]
[ext_resource type="Texture2D" uid="uid://5blcaak2uacc" path="res://sprites/bill_idle2.png" id="4_0o6aa"]
[ext_resource type="PackedScene" uid="uid://bw5fb1wfr61bd" path="res://scenes/main/tilemap.tscn" id="5_uff8u"]
[ext_resource type="Texture2D" uid="uid://bcn2a1vml61ts" path="res://sprites/eye_light.png" id="6_0o6aa"]
[ext_resource type="Texture2D" uid="uid://y7y6e18vhy00" path="res://sprites/background.png" id="7_uff8u"]
[ext_resource type="Texture2D" uid="uid://bq3dk81yfg1iq" path="res://sprites/eye.png" id="8_uff8u"]

[sub_resource type="SpriteFrames" id="SpriteFrames_m5f7d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_0dags")
}, {
"duration": 1.0,
"texture": ExtResource("4_0o6aa")
}],
"loop": true,
"name": &"default",
"speed": 0.83
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_wisrx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_m5f7d"]

[node name="GameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r32m2")

[node name="Hbox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -252.0
offset_top = -133.0
offset_right = 252.0
offset_bottom = 367.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Random" type="VBoxContainer" parent="Hbox"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2

[node name="RandomLevelButton" type="Button" parent="Hbox/Random"]
layout_mode = 2
theme = ExtResource("2_m5f7d")
text = "Random Level"

[node name="ByCode" type="VBoxContainer" parent="Hbox"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2

[node name="LevelCode" type="LineEdit" parent="Hbox/ByCode"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_m5f7d")
placeholder_text = "Code"

[node name="SearchByCodeButton" type="Button" parent="Hbox/ByCode"]
layout_mode = 2
theme = ExtResource("2_m5f7d")
text = "Search by code
"

[node name="StateLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -179.0
offset_right = 125.0
offset_bottom = -145.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_m5f7d")
horizontal_alignment = 1

[node name="CreateLevelButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -15.5
offset_right = 125.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_m5f7d")
text = "Create a Level
"

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -575.5
offset_top = 57.0
offset_right = 575.5
offset_bottom = 146.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_lqqhp")
theme_override_font_sizes/font_size = 70
text = "The Superb Bill Manufacturer"

[node name="Bill" type="AnimatedSprite2D" parent="."]
position = Vector2(190, 600)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_m5f7d")
autoplay = "default"
frame_progress = 0.930486

[node name="Tilemap" parent="." instance=ExtResource("5_uff8u")]
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAAAAsAAAAAAAEAAAAAAAoAAAAAAAEAAAABAAoAAAAAAAEAAAABAAsAAAAAAAEAAAACAAoAAAAAAAEAAAACAAsAAAAAAAEAAAADAAoAAAAAAAEAAAADAAsAAAAAAAEAAAAEAAoAAAAAAAEAAAAEAAsAAAAAAAEAAAAAAAkAAAAAAAMAAAABAAkAAAAAAAMAAAAEAAkAAAAAAAMAAAA=")

[node name="EyeLight" type="PointLight2D" parent="."]
position = Vector2(190, 346)
rotation = 1.5708
color = Color(0.940362, 5.34251e-06, 3.85046e-07, 1)
energy = 3.0
blend_mode = 2
shadow_filter_smooth = 27.5
texture = ExtResource("6_0o6aa")
texture_scale = 3.0

[node name="Background" type="Sprite2D" parent="."]
z_index = -5
position = Vector2(608.5, 364)
scale = Vector2(106.688, 54)
texture = ExtResource("7_uff8u")

[node name="Eye" type="Sprite2D" parent="."]
light_mask = 2
z_index = -3
position = Vector2(190, 14)
scale = Vector2(10, 10)
texture = ExtResource("8_uff8u")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -137.0
grow_horizontal = 0
grow_vertical = 0

[node name="Master" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_m5f7d")
text = "Master"

[node name="MasterVolume" type="HSlider" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_icons/tick = SubResource("AtlasTexture_wisrx")
max_value = 10.0
value = 5.0
tick_count = 10

[node name="Music" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_m5f7d")
text = "Music"

[node name="MusicVolume" type="HSlider" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_icons/tick = SubResource("AtlasTexture_m5f7d")
max_value = 10.0
value = 5.0
tick_count = 10

[node name="Sound" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_m5f7d")
text = "Sound"

[node name="SoundVolume" type="HSlider" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_icons/tick = SubResource("AtlasTexture_m5f7d")
max_value = 10.0
value = 5.0
tick_count = 10

[connection signal="pressed" from="Hbox/Random/RandomLevelButton" to="." method="_on_random_level_button_pressed"]
[connection signal="pressed" from="Hbox/ByCode/SearchByCodeButton" to="." method="_on_search_by_code_button_pressed"]
[connection signal="pressed" from="CreateLevelButton" to="." method="_on_create_level_button_pressed"]
